[workspace]
members = [
    "zbus",
    "zvariant",
    "zbus_names",
    "zvariant_derive",
    "zvariant_utils",
    "zbus_macros",
    "zbus_xml",
    "zbus_xmlgen",
]
resolver = "2"

[workspace.lints.rust]
# This optional cfg flag is used by tokio code to set task name
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/dbus2/zbus/"

[profile.bench]
debug = true
strip = "none"
