[package]
name = "zbus_macros"
# Keep version in sync with zbus crate
version = "5.5.0"
authors = [
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "proc-macros for zbus"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[features]
default = []
# Enable blocking API.
blocking-api = ["zbus/blocking-api"]
gvariant = ["zvariant/gvariant", "zvariant_utils/gvariant"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
syn = { version = "2.0.64", features = ["extra-traits", "fold", "full"] }
quote = "1.0.36"
proc-macro-crate = "3.2.0"
zvariant = { path = "../zvariant", version = "5.0.0", default-features = false }
zbus_names = { path = "../zbus_names", version = "4.0" }
zvariant_utils = { path = "../zvariant_utils", version = "3.1.0" }

[dev-dependencies]
zbus = { path = "../zbus" }
serde = { version = "1.0.200", features = ["derive"] }
async-io = "2.3.2"
futures-util = { version = "0.3.30", default-features = false }

[lints]
workspace = true
