[package]
name = "zbus_macros"
# Keep version in sync with zbus crate
version = "5.5.0"
authors = [
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "proc-macros for zbus"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[features]
default = []
# Enable blocking API.
blocking-api = ["zbus/blocking-api"]
gvariant = ["zvariant/gvariant", "zvariant_utils/gvariant"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn = { workspace = true, features = ["extra-traits", "fold", "full"] }
quote.workspace = true
proc-macro-crate.workspace = true

zvariant.workspace = true
zbus_names.workspace = true
zvariant_utils.workspace = true

[dev-dependencies]
zbus.workspace = true
serde.workspace = true
async-io.workspace = true
futures-util.workspace = true

[lints]
workspace = true
