[package]
name = "zbus_names"
version = "4.2.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "A collection of D-Bus bus names types"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC"]
license = { workspace = true }
categories = ["os::unix-apis"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
zvariant = { path = "../zvariant", version = "5.0.0", default-features = false, features = [
    "enumflags2",
] }
static_assertions = "1.1.0"
winnow = "0.7"

[dev-dependencies]
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
