[package]
name = "zbus_names"
version = "4.2.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "A collection of D-Bus bus names types"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC"]
license = { workspace = true }
categories = ["os::unix-apis"]
readme = "README.md"

[dependencies]
zvariant = { path = "../zvariant", features = [
    "enumflags2",
], version = "5.5.0" }

serde.workspace = true
winnow.workspace = true

[dev-dependencies]
criterion.workspace = true

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
