[package]
name = "zbus_polkit"
version = "2.0.0-beta.6"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"

description = "PolicyKit binding"
repository = "https://gitlab.freedesktop.org/dbus/zbus/"
keywords = ["D-Bus", "DBus", "IPC"]
license = "MIT"
categories = ["os::unix-apis"]
readme = "../README.md"

[dependencies]
#zbus = { path = "../zbus", version = "2" }
# Uncomment above and remove the next line when it's 2.0.0
zbus = { path = "../zbus", version = "2.0.0-beta.6" }
zvariant = { path = "../zvariant", version = "2", default-features = false, features = ["enumflags2"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
enumflags2 = { version = "0.6.4", features = ["serde"] }
static_assertions = "1.1.0"

[dev-dependencies]
doc-comment = "0.3.3"
byteorder = "1.3.1"
