[package]
name = "zbus_polkit"
version = "3.0.1"
authors = ["Marc-André Lureau <marcandre.lureau@redhat.com>"]
edition = "2018"
rust-version = "1.60"

description = "PolicyKit binding"
repository = "https://github.com/dbus2/zbus/"
keywords = ["D-Bus", "DBus", "IPC"]
license = "MIT"
categories = ["os::unix-apis"]
readme = "README.md"

[features]
default = ["zbus/async-io"]
tokio = ["zbus/tokio"]

[dependencies]
zbus = { path = "../zbus", version = "3", default-features = false }
zvariant = { path = "../zvariant", version = "3", default-features = false, features = ["enumflags2"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.9"
enumflags2 = { version = "0.7.5", features = ["serde"] }
static_assertions = "1.1.0"

[dev-dependencies]
byteorder = "1.4.3"
async-std = { version = "1.12.0", features = ["attributes" ] }
