[package]
name = "zbus_xml"
version = "5.0.2"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "API to handle D-Bus introspection XML"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC", "XML"]
license = { workspace = true }
categories = ["parsing"]
readme = "README.md"

[dependencies]
serde.workspace = true
zvariant = { path = "../zvariant", version = "5.5.0" }
zbus_names = { path = "../zbus_names", version = "4.2.0" }
quick-xml.workspace = true

[dev-dependencies]
doc-comment.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
