[package]
name = "zbus_xmlgen"
version = "5.0.0"
authors = [
    "Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>",
    "Federico Mena Quintero <federico@gnome.org>",
    "Marc-André Lureau <marcandre.lureau@redhat.com>",
    "Thomas Mühlbacher <tmuehlbacher@posteo.net>",
    "Tim Small <tim@seoss.co.uk>",
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
]
edition = "2021"
rust-version = "1.80"

description = "D-Bus XML interface code generator"
repository = "https://github.com/dbus2/zbus/"
documentation = "https://dbus2.github.io/zbus/"
keywords = ["D-Bus", "DBus", "IPC"]
license = "MIT"
categories = ["os::unix-apis", "development-tools"]
readme = "README.md"

[[bin]]
name = "zbus-xmlgen"
path = "src/main.rs"

[dependencies]
zbus = { path = "../zbus", version = "5.0.0", features = ["blocking-api"] }
zbus_xml = { path = "../zbus_xml", version = "5.0.0" }
snakecase = "0.1.0"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }

[dev-dependencies]
pretty_assertions = "1.4"

[lints]
workspace = true
