[package]
name = "zvariant"
version = "5.2.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "D-Bus & GVariant encoding & decoding"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC", "GVariant"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[features]
default = []
# FIXME: Also allow disabling D-Bus support
gvariant = ["zvariant_derive/gvariant", "zvariant_utils/gvariant"]
ostree-tests = ["gvariant"]
# Enables ser/de of `Option<T>` as an array of 0 or 1 elements.
option-as-array = []
camino = ["dep:camino"]

[dependencies]
zvariant_derive = { version = "=5.2.0", path = "../zvariant_derive" }
zvariant_utils = { version = "3.1.0", path = "../zvariant_utils" }
endi = "1.1.0"
serde = { version = "1.0.200", features = ["derive"] }
static_assertions = "1.1.0"
winnow = "0.6"

# Optional dependencies

arrayvec = { version = "0.7.4", features = ["serde"], optional = true }
enumflags2 = { version = "0.7.9", features = ["serde"], optional = true }
serde_bytes = { version = "0.11.14", optional = true }
uuid = { version = "1.8.0", features = ["serde"], optional = true }
url = { version = "2.5.0", features = ["serde"], optional = true }
time = { version = "0.3.36", features = ["serde"], optional = true }
chrono = { version = "0.4.38", features = [
    "serde",
], default-features = false, optional = true }
heapless = { version = "0.8.0", features = ["serde"], optional = true }
camino = { version = "1.1.9", optional = true }

[dev-dependencies]
serde_json = "1.0.116"
serde_repr = "0.1.19"
rand = "0.8.5"
criterion = "0.5.1"
chrono = { version = "0.4.38", features = [
    "serde",
    "alloc",
], default-features = false }

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
