[package]
name = "zvariant_derive"
# Keep major and minor version in sync with zvariant crate
version = "5.4.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "D-Bus & GVariant encoding & decoding"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC", "GVariant"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
gvariant = ["zvariant_utils/gvariant", "zvariant/gvariant"]

[dependencies]
proc-macro2 = "1.0.81"
syn = { version = "2.0.64", features = ["extra-traits", "full"] }
quote = "1.0.36"
proc-macro-crate = "3.2.0"
zvariant_utils = { path = "../zvariant_utils", version = "3.1.0" }

[dev-dependencies]
zvariant = { path = "../zvariant", features = ["enumflags2"] }
enumflags2 = { version = "0.7.9", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_repr = "0.1.19"

[lints]
workspace = true
