[package]
name = "zvariant_derive"
# Keep major and minor version in sync with zvariant crate
version = "5.8.0"
authors = ["Zeeshan Ali Khan <zeeshanak@gnome.org>"]
edition = { workspace = true }
rust-version = { workspace = true }

description = "D-Bus & GVariant encoding & decoding"
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC", "GVariant"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
gvariant = ["zvariant_utils/gvariant", "zvariant/gvariant"]

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro-crate.workspace = true
zvariant_utils = { path = "../zvariant_utils", version = "3.2.0" }

[dev-dependencies]
zvariant = { workspace = true, features = ["enumflags2"] }
enumflags2.workspace = true
serde.workspace = true
serde_repr.workspace = true

[lints]
workspace = true
