[package]
name = "zvariant_utils"
version = "3.2.0"
authors = [
    "Zeeshan Ali Khan <zeeshanak@gnome.org>",
    "turbocooler <turbocooler@cocaine.ninja>",
]
edition = { workspace = true }
rust-version = { workspace = true }

description = "Various utilities used internally by the zvariant crate."
repository = { workspace = true }
keywords = ["D-Bus", "DBus", "IPC", "GVariant"]
license = { workspace = true }
categories = ["data-structures", "encoding", "parsing"]
readme = "README.md"

[features]
default = []
gvariant = []

[dependencies]
proc-macro2 = "1.0.81"
syn = { version = "2.0.64", features = ["extra-traits", "full"] }
quote = "1.0.36"
static_assertions = "1.1.0"
serde = "1.0.200"
winnow = "0.7"

[dev-dependencies]
zvariant = { path = "../zvariant" }

[lints]
workspace = true
